ru était sur ton pc

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>average</title>
+    <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
   </head>
   <body>
+    <div id="dz-root"></div>
     <div id="app">
       <router-view></router-view>
     </div>
