--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>average</title>
     <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
   </head>
   <body>
     <div id="dz-root"></div>
