--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>average</title>
     <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC8yo3Bl68tWLx1yfYz4pasHpZSZ4e6TIA"></script>
 
   </head>
   <body>
