--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC8yo3Bl68tWLx1yfYz4pasHpZSZ4e6TIA"></script>
 
+    <script>
+      window.average = {};
+    </script>
+
   </head>
   <body>
     <div id="dz-root"></div>
