--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </script>
 
   </head>
-  <body>
-    <div id="dz-root"></div>
+  <body style="width: 100%;">
+    <div id="dz-root" style="height: 0; width: 0; display: none;"></div>
     <div id="app">
       <router-view></router-view>
     </div>
