--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>average</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Muzi</title>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
     <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC8yo3Bl68tWLx1yfYz4pasHpZSZ4e6TIA"></script>
-
+    <script type="text/javascript" src="cordova.js"></script>
     <script>
       window.average = {};
+      window.onerror = function(msg, url, linenumber) {
+        alert('Error message: '+msg+'\nURL: '+url+'\nLine Number: '+linenumber);
+        return true;
+      }
     </script>
 
   </head>
@@ -16,5 +30,6 @@
     <div id="app">
       <router-view></router-view>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
